--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,83 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 20px;
+}
+header{
+    margin-bottom:20px;
+    text-align:center;
+}
+
+#task-form-section{
+    background-color: white;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+
+#task-form{
+    display : flex;
+    flex-wrap : wrap;
+    gap: 10px;
+}
+
+#task-form input,
+#task-form button {
+    padding: 10px;
+}
+#task-form input {
+    flex: 1;
+    min-width: 150px ;
+}
+#task-form button{
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    flex-shrink:0;
+    cursor:pointer;
+    
+}
+
+#tasks-table{
+    width: 100%;
+    border-collapse: collapse;
+    background-color: white;
+    border-radius: 8px;
+    overflow:hidden;
+}
+
+#tasks-table th, #tasks-table td {
+    border: 1px solid #ddd;
+    padding: 12px;
+    text-align: left;
+}
+#tasks-table th {
+   background-color: #007BFF;
+   color:white
+   
+}
+#tasks-table tr:nth-child(even){
+    background-color: #f9f9f9;
+}
+.task-completed{
+    text-decoration: line-through;
+    color:gray;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
