--- a/styles.css
+++ b/styles.css
@@ -68,16 +68,75 @@ header{
 }
 
 
+.modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+}
+
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  min-width: 300px;
+  min-height: 200px;
+  max-width: 90%;
+  max-height: 90%;
+  resize: both;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+}
 
 
 
 
+.modal textarea{
+    flex-grow: 1;
+    width: 100%;
+    height: 100%;
+    resize: none;
+    min-height: 100px;
+    min-width: 100%;
+}
+
+.modal-buttons{
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+.hidden{
+    display:none;
+}
+
+
+.notes-button{
+    background: none;
+    border: none;
+    font-size: 1.2em;
+    cursor: pointer;
+}
 
 
 
+@keyframes fadeInScale{
+    from{
+        opacity: 0;
+        transfor: scale(0.95);
+    }
+}
 
-
-
-
-
-
+.modal-content {
+    animation: fadeInScale 0.2s ease-out;
+}
