Finsished, need style (2.0)

--- a/Desktop app/styles.css
+++ b/Desktop app/styles.css
@@ -152,27 +152,15 @@ header{
     margin : 10px 0 10px;
 }
 
-.subject-card{
-    padding: 12px;
-    background:gray;
-    display : flex;
-    flex-direction : column;
-    justify-content: space-between;
 
 
-
-}
-
-
-
-.subject-card:hover{
-
-}
 
 .subject-title{
 
 }
 
-.subject-meta{
-    
+
+.subject-title:hover{
+
 }
+
